; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_interpolation.c_filter_sinc.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_interpolation.c_filter_sinc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_PI = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double)* @filter_sinc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @filter_sinc(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  store double %0, double* %3, align 8
  %4 = load double, double* %3, align 8
  %5 = fcmp oeq double %4, 0.000000e+00
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store double 1.000000e+00, double* %2, align 8
  br label %16

7:                                                ; preds = %1
  %8 = load double, double* @M_PI, align 8
  %9 = load double, double* %3, align 8
  %10 = fmul double %8, %9
  %11 = call double @sin(double %10) #2
  %12 = load double, double* @M_PI, align 8
  %13 = load double, double* %3, align 8
  %14 = fmul double %12, %13
  %15 = fdiv double %11, %14
  store double %15, double* %2, align 8
  br label %16

16:                                               ; preds = %7, %6
  %17 = load double, double* %2, align 8
  ret double %17
}

; Function Attrs: nounwind
declare dso_local double @sin(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
